Ensure modal forms are the same width as main page content on mobile

--- a/src/components/gameEditForm/gameEditForm.module.css
+++ b/src/components/gameEditForm/gameEditForm.module.css
@@ -2,7 +2,6 @@
   font-family: 'Quattrocento Sans', Arial, Helvetica, sans-serif;
   padding: 24px;
   margin: 0 auto;
-  width: 80%;
   background-color: #f0f0f0;
 }
 
